# pysatl-cfinversion

./: .gitignore  Bohmans_testcase.ipynb  Fourier_inversion.ipynb  README.md  loss_test.ipynb  pyproject.toml  requirements.txt  setup.cfg  setup.py  test.ipynb
.github/workflows/: python-package.yml
CFInvert/CharFuncInverter/Bohman/: BohmanMethod.py  BohmansInverters.py  BohmansInvertersNaive.py
CFInvert/CharFuncInverter/FourierTransform/: FTInverter.py
CFInvert/Distributions/: levy.py  normal.py  poisson.py
cfinversion/CharFuncInverter/Bohman/: BohmanMethod.py  BohmansInverters.py  BohmansInvertersNaive.py
cfinversion/CharFuncInverter/FourierTransform/: FTInverter.py
cfinversion/Distributions/: levy.py  normal.py  poisson.py
cfinversion/continuous/: continuous_inverter.py
cfinversion/continuous/bohman/: abstract_bohman_inverter.py  bohman_inverters.py
cfinversion/continuous/fft_based/: __init__.py  fft_inverter.py  naive_gp_inverter.py
cfinversion/distributions/: __init__.py  laplace.py  levy.py  normal.py  poisson.py  sqr_uniform.py  uniform.py
cfinversion/tools/: standardizer.py  validation_tools.py
cfinvert/CharFuncInverter/: Analyzer.py  CharFuncInverter.py
cfinvert/CharFuncInverter/Bohman/: BohmanMethod.py  BohmansInverters.py  (+1 more)
cfinvert/Distributions/: levy.py  normal.py  pareto.py  poisson.py
docs/: views.rst
examples/: Bohmans_testcase.ipynb  CaseStudy.ipynb  CaseStudyConvergence.ipynb  CaseStudyLRE.ipynb  Examples_BohmanMethods.ipynb  Fourier_inversion.ipynb  Fourier_inversion_1.ipynb  Numerical_inversion_of_characteristic_functions.ipynb  Untitled.ipynb  Untitled1.ipynb  levi.ipynb  pareto.ipynb  results.csv
notebooks/: Fourier_inversion.ipynb  Numerical_inversion_of_characteristic_functions.ipynb  Untitled.ipynb  test.ipynb
src/: BohmansInverters.py  bohman1975.py  сhr_func.py
src/CharFuncInverter/: Analyzer.py  BohmansInverters.py  BohmansInvertersNaive.py  CharFuncInverter.py  FTInverter.py  сhr_func.py
src/Distributions/: pareto.py
tests/: laplace.py  normal.py  test.py  test_bohman.py  test_fft.py  uniform.py
(+2 files in other folders)
