[metadata]
name = CharFuncInverter
version = 0.0.1
author = lily
author_email = lilyreber404@gmail.com
description = A package for characteristic functions inversion.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lilyreber/Numerical-inversion-of-characteristic-functions
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[mypy]
python_version = 3.9
disallow_untyped_defs = True
ignore_missing_imports = True
exclude = ^tests/|^setup\.py$|^setup\.cfg$|^CFInvert/CharFuncInverter/Bohman/BohmansInvertersNaive\.py$

[flake8]
exclude = .git, __pycache__
max-line-length = 120
max-complexity = 8
